Prevent the font size samples from wrapping
Fixes #76

--- a/app/renderer/patterns-common/common.css
+++ b/app/renderer/patterns-common/common.css
@@ -6,6 +6,10 @@
   --font-patternbot-code: "Source Code Pro", monospace;
 }
 
+.patternbot-no-wrap {
+  white-space: nowrap;
+}
+
 .patternbot-list-group {
   background-color: transparent;
   text-align: left;
